# flask-menu

./: .coveragerc  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .kwalitee.yml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGES  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  docker-compose.yml  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  changelog.rst  conf.py  index.rst  installation.rst  license.rst  quickstart.rst  userguide.rst
docs/_templates/: sidebarintro.html
examples/menu_and_breadcrumbs/: app.py  index.html
examples/simple/: app.py
flask_menu/: __init__.py  classy.py  config.py  decorator.py  decorators.py  ext.py  menu.py  proxies.py  version.py
tests/: conftest.py  test_classy.py  test_core.py
