# -*- coding: utf-8 -*-
#
# This file is part of Flask-Menu
# Copyright (C) 2013, 2014 CERN.
# Copyright (C) 2023 Graz University of Technology.
#
# Flask-Menu is free software; you can redistribute it and/or modify
# it under the terms of the Revised BSD License; see LICENSE file for
# more details.

[metadata]
name = flask-menu
version = attr: flask_menu.__version__
description = "Flask-Menu is a Flask extension that adds support for generating menus."
long_description = file: README.rst, CHANGES.rst
keywords =
license = BSD
author = Invenio collaboration
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/flask-menu
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Flask>=2.0.0

[options.extras_require]
tests =
    check-manifest>=0.49
    pytest-black-ng>=0.3.0
    pytest-cov>=4.1.0
    pytest-flask>=1.2.0
    pytest-isort>=3.1.0
    pytest-pydocstyle>=2.3.2
    sphinx>=4.5

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt
    docs/_themes

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=flask_menu --cov-report=term-missing
testpaths = tests flask_menu
filterwarnings = ignore::pytest.PytestDeprecationWarning
